<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg_tan"
	android:weightSum="1">
	<TextView android:id="@+id/title" android:layout_gravity="center"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/title1" android:textColor="#C85A17"
		android:textSize="22sp" />

	<TextView android:id="@+id/label1" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/start"
		android:textSize="22sp" android:textColor="#000" android:typeface="sans"
		android:textStyle="bold"></TextView>
	<EditText android:layout_weight="0.06" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:background="@android:drawable/editbox_background"
		android:id="@+id/start" android:layout_marginBottom="12dp"></EditText>

	<TextView android:id="@+id/label2" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/end"
		android:textSize="22sp" android:textColor="#000" android:typeface="sans"
		android:textStyle="bold" />
	<EditText android:layout_weight="0.06" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:background="@android:drawable/editbox_background"
		android:id="@+id/end" android:layout_marginBottom="12dp"></EditText>
	<Button android:textSize="20sp" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/calcButton"
		android:text="@string/cont"></Button>
</LinearLayout>
